build(web): upgrade to angular 15 & material 15

--- a/web/src/app/components/stream-item/_stream-item-theme.scss
+++ b/web/src/app/components/stream-item/_stream-item-theme.scss
@@ -31,16 +31,13 @@
   }
 }
 
-@mixin stream-item-typography($config) {
+@mixin stream-item-typography($theme) {
+  $config: mat.get-typography-config($theme);
+
   .stream-item {
     .duration {
       font-size: mat.font-size($config, "caption");
       font-weight: mat.font-weight($config, "body-2");
-    }
-
-    .title {
-      font-size: mat.font-size($config, "body-1");
-      font-weight: mat.font-weight($config, "body-1");
     }
 
     .meta,
