--- a/web/src/app/components/stream-item/stream-item.html
+++ b/web/src/app/components/stream-item/stream-item.html
@@ -41,7 +41,7 @@
 </a>
 
 <a
-  class="title"
+  class="title mat-subtitle-2"
   [attr.title]="stream.title"
   [routerLink]="stream.status === 'scheduled' ? null : ['/stream', stream.streamId]"
 >
