--- a/web/src/app/layout/sidenav/_sidenav-theme.scss
+++ b/web/src/app/layout/sidenav/_sidenav-theme.scss
@@ -31,7 +31,9 @@
   }
 }
 
-@mixin sidenav-typography($config) {
+@mixin sidenav-typography($theme) {
+  $config: mat.get-typography-config($theme);
+
   .sidenav {
     .info {
       font-size: mat.font-size($config, "button");
