--- a/web/src/app/layout/sidenav/sidenav.html
+++ b/web/src/app/layout/sidenav/sidenav.html
@@ -6,8 +6,8 @@
       routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
-      <mat-icon mat-list-icon svgIcon="youtube"></mat-icon>
-      <p mat-line i18n="@@youtubeChannel">YouTube Channel</p>
+      <mat-icon matListItemIcon svgIcon="youtube"></mat-icon>
+      <p matListItemTitle i18n="@@youtubeChannel">YouTube Channel</p>
     </a>
     <a
       mat-list-item
@@ -15,8 +15,8 @@
       routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
-      <mat-icon mat-list-icon svgIcon="bilibili"></mat-icon>
-      <p mat-line i18n="@@bilibiliChannel">Bilibili Channel</p>
+      <mat-icon matListItemIcon svgIcon="bilibili"></mat-icon>
+      <p matListItemTitle i18n="@@bilibiliChannel">Bilibili Channel</p>
     </a>
     <a
       mat-list-item
@@ -24,8 +24,8 @@
       routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
-      <mat-icon mat-list-icon svgIcon="stream"></mat-icon>
-      <p mat-line i18n="@@youtubeStream">YouTube Stream</p>
+      <mat-icon matListItemIcon svgIcon="stream"></mat-icon>
+      <p matListItemTitle i18n="@@youtubeStream">YouTube Stream</p>
     </a>
     <a
       mat-list-item
@@ -33,8 +33,8 @@
       routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
-      <mat-icon mat-list-icon svgIcon="calendar"></mat-icon>
-      <p mat-line i18n="@@youtubeSchedule">YouTube Schedule</p>
+      <mat-icon matListItemIcon svgIcon="calendar"></mat-icon>
+      <p matListItemTitle i18n="@@youtubeSchedule">YouTube Schedule</p>
     </a>
     <a
       mat-list-item
@@ -42,8 +42,8 @@
       routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
-      <mat-icon mat-list-icon svgIcon="tune"></mat-icon>
-      <p mat-line i18n="@@settings">Settings</p>
+      <mat-icon matListItemIcon svgIcon="tune"></mat-icon>
+      <p matListItemTitle i18n="@@settings">Settings</p>
     </a>
   </mat-nav-list>
 
