--- a/web/src/app/layout/sidenav/sidenav.scss
+++ b/web/src/app/layout/sidenav/sidenav.scss
@@ -10,6 +10,10 @@
     flex: 1;
   }
 
+  .mat-mdc-list-item-icon {
+    color: rgba(0, 0, 0, 0.54);
+  }
+
   .info {
     user-select: none;
     padding: 16px 16px 8px 16px;
