--- a/web/src/app/pages/settings/playlist-selector/playlist-selector.html
+++ b/web/src/app/pages/settings/playlist-selector/playlist-selector.html
@@ -1,4 +1,4 @@
-<mat-form-field appearance="none">
+<mat-form-field appearance="outline">
   <mat-label *ngIf="loading">Loading...</mat-label>
 
   <mat-select [value]="selected">
