--- a/web/src/app/pages/settings/youtube-settings/youtube-settings.html
+++ b/web/src/app/pages/settings/youtube-settings/youtube-settings.html
@@ -1,9 +1,11 @@
-<h4 class="title">YouTube Account</h4>
-
 <div [style.padding-bottom.px]="16">
   <mat-list *ngIf="gapi.user$ | async as user; else login">
     <mat-list-item>
-      <img matListAvatar [attr.src]="user.imageUrl" [attr.alt]="user.name" />
+      <img
+        matListItemAvatar
+        [attr.src]="user.imageUrl"
+        [attr.alt]="user.name"
+      />
       <h3 matLine>{{ user.name }}</h3>
       <p matLine>{{ user.email }}</p>
       <button mat-button (click)="gapi.signOut()">Sign Out</button>
