--- a/web/src/app/pages/streams-detail/live-chat/_live-chat-theme.scss
+++ b/web/src/app/pages/streams-detail/live-chat/_live-chat-theme.scss
@@ -21,7 +21,9 @@
   }
 }
 
-@mixin live-chat-typography($config) {
+@mixin live-chat-typography($theme) {
+  $config: mat.get-typography-config($theme);
+
   .live-chat-chart {
     .label,
     .stroke {
