--- a/web/src/app/pages/streams-detail/stream-stats-chart/_stream-stats-chart-theme.scss
+++ b/web/src/app/pages/streams-detail/stream-stats-chart/_stream-stats-chart-theme.scss
@@ -29,7 +29,9 @@
   }
 }
 
-@mixin stream-stats-chart-typography($config) {
+@mixin stream-stats-chart-typography($theme) {
+  $config: mat.get-typography-config($theme);
+
   .stream-stats-chart {
     .label,
     .stroke {
