--- a/web/src/app/pages/vtubers-detail/vtuber-summary/_vtuber-summary-theme.scss
+++ b/web/src/app/pages/vtubers-detail/vtuber-summary/_vtuber-summary-theme.scss
@@ -22,11 +22,13 @@
   }
 }
 
-@mixin vtuber-summary-typography($config) {
+@mixin vtuber-summary-typography($theme) {
+  $config: mat.get-typography-config($theme);
+
   .vtuber-summary {
     .name {
-      font-size: mat.font-size($config, "title");
-      font-weight: mat.font-weight($config, "title");
+      font-size: mat.font-size($config, "subtitle-1");
+      font-weight: mat.font-weight($config, "subtitle-1");
     }
   }
 }
