--- a/web/src/app/pages/channels-list/channel-table/channel-table.scss
+++ b/web/src/app/pages/channels-list/channel-table/channel-table.scss
@@ -23,9 +23,9 @@
     outline: none;
   }
 
-  .mat-column-name.mat-cell,
-  .mat-column-name.mat-header-cell,
-  .mat-column-name.mat-footer-cell {
+  .mat-column-name.mat-mdc-cell,
+  .mat-column-name.mat-mdc-header-cell,
+  .mat-column-name.mat-mdc-footer-cell {
     padding: 0 12px;
     word-break: keep-all;
     text-align: center;
@@ -36,19 +36,19 @@
     monthlyViewCount;
 
   @each $columns in $columns {
-    .mat-footer-cell.mat-column-#{$columns},
-    .mat-cell.mat-column-#{$columns} {
+    .mat-mdc-footer-cell.mat-column-#{$columns},
+    .mat-mdc-cell.mat-column-#{$columns} {
       font-family: "Fira Code", monospace;
       text-align: right;
       padding-right: 18px;
     }
   }
 
-  .mat-row .mat-cell:last-child {
+  .mat-mdc-row .mat-mdc-cell:last-child {
     padding-right: 42px;
   }
 
-  .mat-footer-row .mat-footer-cell:last-child {
+  .mat-mdc-footer-row .mat-mdc-footer-cell:last-child {
     padding-right: 42px;
   }
 
