--- a/web/src/app/pages/settings/theme-settings/theme-settings.html
+++ b/web/src/app/pages/settings/theme-settings/theme-settings.html
@@ -1,14 +1,11 @@
-<mat-list-item>
-  <h3 matLine>Theme</h3>
-
-  <mat-form-field appearance="none">
-    <mat-select
-      [value]="config.theme$ | async"
-      (selectionChange)="config.theme$.next($event.value)"
-    >
-      <mat-option *ngFor="let theme of themes" [value]="theme.value">
-        {{ theme.label }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-</mat-list-item>
+<mat-form-field appearance="outline" [style.width.%]="100">
+  <mat-label>Theme</mat-label>
+  <mat-select
+    [value]="config.theme$ | async"
+    (selectionChange)="config.theme$.next($event.value)"
+  >
+    <mat-option *ngFor="let theme of themes" [value]="theme.value">
+      {{ theme.label }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
