feat(web): update ui and remove ngx-echarts

--- a/web/src/app/components/filter-group/vtuber-filter/vtuber-filter.html
+++ b/web/src/app/components/filter-group/vtuber-filter/vtuber-filter.html
@@ -16,7 +16,7 @@
 
   <ng-container *ngIf="_vtubers.length > 6">
     <span
-      class="rounded-full mat-body-2 h-8 w-8 -ml-2 border-2 border-solid border-transparent inline-block select-none cursor-pointer text-center mat-bg-unselected-chip"
+      class="rounded-full mat-body-2 h-8 w-8 leading-8 -ml-2 border-2 border-solid border-transparent inline-block select-none cursor-pointer text-center mat-bg-unselected-chip"
       [style.zIndex]="9"
       [class.mat-border-primary]="_listSelected"
       (click)="this._isOpen = !this._isOpen"
