--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -1,25 +1,27 @@
 <hls-helmet i18n-title="@@settings" title="Settings"></hls-helmet>
 
 <div class="mx-auto max-w-4xl p-4">
-  <hls-appearance></hls-appearance>
+  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+    <hls-appearance></hls-appearance>
+  </div>
 
-  <mat-divider class="!mb-4"></mat-divider>
+  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+    <hls-language></hls-language>
+  </div>
 
-  <hls-language></hls-language>
+  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+    <hls-region></hls-region>
+  </div>
 
-  <mat-divider class="!mb-4"></mat-divider>
+  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+    <hls-youtube-settings></hls-youtube-settings>
+  </div>
 
-  <hls-region></hls-region>
+  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+    <hls-vtubers-settings></hls-vtubers-settings>
+  </div>
 
-  <mat-divider class="!mb-4"></mat-divider>
-
-  <hls-youtube-settings></hls-youtube-settings>
-
-  <mat-divider class="!mb-4"></mat-divider>
-
-  <hls-vtubers-settings></hls-vtubers-settings>
-
-  <mat-divider class="!mb-4"></mat-divider>
-
-  <hls-miscellaneous></hls-miscellaneous>
+  <div class="mat-border-divider mat-bg-card rounded border-solid p-4 mb-4">
+    <hls-miscellaneous></hls-miscellaneous>
+  </div>
 </div>
