--- a/web/src/app/pages/settings/youtube-settings/playlist-selector/playlist-selector.html
+++ b/web/src/app/pages/settings/youtube-settings/playlist-selector/playlist-selector.html
@@ -1,5 +1,5 @@
-<mat-form-field appearance="outline">
-  <mat-label *ngIf="loading">Loading...</mat-label>
+<mat-form-field appearance="outline" class="w-full">
+  <mat-label>Saved to playlist</mat-label>
 
   <mat-select [value]="selected">
     <mat-option *ngFor="let item of items" [value]="item.id">
