--- a/web/src/app/pages/vtubers-detail/stream-time/stream-time-bar-chart/stream-time-bar-chart.html
+++ b/web/src/app/pages/vtubers-detail/stream-time/stream-time-bar-chart/stream-time-bar-chart.html
@@ -1,10 +1,5 @@
 <div class="overflow-x-auto">
-  <div
-    echarts
-    [style.width.px]="920"
-    [style.height.px]="156"
-    [options]="options"
-    [theme]="theme$ | async"
-    [autoResize]="true"
-  ></div>
+  <div [style.width.px]="920">
+    <hls-chart [height]="156" [options]="options"></hls-chart>
+  </div>
 </div>
