--- a/web/src/app/pages/vtubers-detail/stream-time/stream-time-calendar/stream-time-calendar.html
+++ b/web/src/app/pages/vtubers-detail/stream-time/stream-time-calendar/stream-time-calendar.html
@@ -9,25 +9,13 @@
   </div>
 
   <div dir="rtl" class="flex-1 overflow-x-auto">
-    <div
-      echarts
-      [style.width.px]="920"
-      [style.height.px]="156"
-      [options]="option"
-      [theme]="theme$ | async"
-      [autoResize]="true"
-    ></div>
+    <div [style.width.px]="920">
+      <hls-chart [height]="156" [options]="option"></hls-chart>
+    </div>
   </div>
 </div>
 
-<div
-  class="mat-body mat-text-caption mat-secondary-text items-center flex my-2"
->
-  <div class="flex-1">
-    {{ total | formatDuration }} ({{ start | date: 'mediumDate' }} - {{ end |
-    date: 'mediumDate'}})
-  </div>
-
+<div class="mat-text-caption mat-secondary-text text-right mt-2">
   Less
   <svg [attr.width]="84" [attr.height]="12">
     <rect
