--- a/web/src/app/pages/settings/miscellaneous/licenses/licenses.html
+++ b/web/src/app/pages/settings/miscellaneous/licenses/licenses.html
@@ -3,5 +3,5 @@
 <div class="mat-typography mx-auto max-w-4xl p-4">
   <h1>Third Party Licenses</h1>
 
-  <pre class="font-mono p-0 m-0">{{ text$| async }}</pre>
+  <pre class="font-mono p-0 m-0">{{ (licensesQry | useQry)?.data }}</pre>
 </div>
