--- a/web/src/app/pages/settings/miscellaneous/ngsw-settings/ngsw-settings.html
+++ b/web/src/app/pages/settings/miscellaneous/ngsw-settings/ngsw-settings.html
@@ -5,5 +5,7 @@
 
   <p>Service worker {{ isEnabled ? 'is' : 'is not' }} enabled</p>
 
-  <pre class="font-mono p-0 m-0" *ngIf="isEnabled">{{ state$ | async }}</pre>
+  <pre class="font-mono p-0 m-0" *ngIf="isEnabled">
+{{ (ngswStateQry | useQry)?.data }}</pre
+  >
 </div>
